<resources>
    <string name="app_name">MONITOR THE PATROLS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">Email ID</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">View Your Report</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">thisispooja97@gmail.com</string>
    <string name="firebase_password" translatable="false">12345678</string>
    <string name="title_activity_maps">Map</string>


    <string name="page_1_email_hint">Email</string>
    <string name="page_1_login_btn_hint">LOGIN</string>
    <string name="page_1_password_hint">Password</string>
    <string name="page_1_register">Register</string>
    <string name="page_1_forgot_password">Forgot Password?</string>


    <string name="page_2_heading">Sign Up</string>
    <string name="page_2_already_registered">Already Registered?</string>
    <string name="page_2_confirm_password">Confirm Your Password</string>
    <string name="page_2_select">Select</string>
    <string name="page_2_password">Enter Password</string>
    <string name="page_2_email">Enter Email</string>
    <string name="page_2_login">Click here to LOGIN</string>


    <string name="page_3_heading">Forgot Password</string>
    <string name="page_3_forgot_password">FORGOT PASSWORD</string>
    <string name="page_3_email_hint">Registered Email</string>
    <string name="page_3_reset">Reset Password</string>
    <string name="page_3_login">Click here to LOGIN</string>
    <string name="page_3_signup">Click here to SIGN UP</string>


    <string name="page_4_heading">Enter Details</string>


    <string name="page_5_heading">All Farmers</string>


    <string name="page_6_heading">Farmer Profile</string>
    <string name="title_activity_maps2">Map</string>
</resources>
